--- a/ui/pages/home.tmpl
+++ b/ui/pages/home.tmpl
@@ -26,7 +26,8 @@ Input VK URL:<br>
 </table>
 <h3>Download album</h3>
     <input type="text" id="album" placeholder="Enter Album URL" value=""></input>
-    <button type="button" onclick="downloadAlbum(document.getElementById('album').value)">Download</button>
+    <button type="button" onclick="postQueryARG('/start-worker',document.getElementById('album').value)">Download</button>
+    <button type="button" onclick="postQuery('/stop-worker')">Stop</button>
 <p><hr></p>
 <form action="/exit" method="post">
     <input type="submit" value="Exit Server App">
